--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 #
 # https://code.chs.usgs.gov/coupled/subtrees/vs2drt-src
 # SRC 2020-01-28T10:03:39-07:00
+# SRC 2021-10-31T13:15:30-06:00  -- changed pull to squash -- HEAD:6a1f13f35f1e38b6fd00379f0639b755b0a0a97f
 #
 image: ${CI_REGISTRY}/coupled/containers/buildpack-deps:bionic-scm
 
@@ -74,7 +75,8 @@ subtree-sync:
       export GIT_EDITOR=true
 
       for remote in "${!urls[@]}"; do
-        git_subtree "pull" "${prefixes[$remote]}" "$remote" "${urls[$remote]}"
+        # git_subtree "pull" "${prefixes[$remote]}" "$remote" "${urls[$remote]}"
+        git subtree pull --prefix "${prefixes[$remote]}" --squash "${urls[$remote]}" master
       done
 
       for remote in "${!urls[@]}"; do
