--- a/.github/workflows/distro.yml
+++ b/.github/workflows/distro.yml
@@ -11,8 +11,24 @@ env:
 
 jobs:
 
+  init:
+    name: setup env
+    runs-on: windows-latest
+    steps:
+    - name: rel
+      run: |
+        Get-Command python
+        Write-Output "DATE=8/29/2021" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        Write-Output "REL=15001" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+
+    - name: test rel
+      run: |
+        Get-Command python
+
+
   distcheck:
     name: make distcheck
+    needs: init
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
