Squashed 'PhreeqcRM/' changes from 582a1e3..9d7c8a2
9d7c8a2 Closes usgs-coupled/phreeqcrm#12 (#13)
317c20a Merge pull request #11 from dlparkhurst/master
6aab94d Fixed Doxygen @ref
d5bc13c Finished up documenting YAMLPhreeqcRM class
7d5bef2 fixed my /c/Users/dlpar/bin:/mingw64/bin:/usr/local/bin:/usr/bin:/bin:/mingw64/bin:/usr/bin:/c/Users/dlpar/bin:/c/Program Files (x86)/Intel/oneAPI/compiler/latest/windows/redist/intel64_win/compiler:/c/Program Files/Amazon Corretto/jdk1.8.0_292/bin:/c/Program Files/Microsoft MPI/Bin:/c/WINDOWS/system32:/c/WINDOWS:/c/WINDOWS/System32/Wbem:/c/WINDOWS/System32/WindowsPowerShell/v1.0:/c/WINDOWS/System32/OpenSSH:/c/Program Files (x86)/Intel/oneAPI/compiler/2021.1.1/windows:/c/Program Files (x86)/Intel/oneAPI/mpi/2021.1.1/bin:/c/Program Files (x86)/Intel/oneAPI/compiler/2021.1.1/windows/redist/intel64_win/compiler:/cmd:/c/Program Files/Microsoft SQL Server/130/Tools/Binn:/c/Program Files/Microsoft SQL Server/Client SDK/ODBC/170/Tools/Binn:/c/Program Files/PhreePlot:/c/Program Files/HDF_Group/HDF5/1.12.0/bin:/c/Program Files/mingw-w64/x86_64-8.1.0-posix-seh-rt_v6-rev0/mingw64/bin:/c/Program Files (x86)/Intel/Intel(R) Management Engine Components/DAL:/c/Program Files/Intel/Intel(R) Management Engine Components/DAL:/c/Program Files/TortoiseGit/bin:/c/Program Files/USGS/phast-3.7.15968/bin:/c/Program Files (x86)/Common Files/Intel/Shared Libraries/redist/intel64/mpirt:/c/Program Files (x86)/Common Files/Intel/Shared Libraries/redist/intel64/compiler:/c/Program Files/USGS/phreeqc-3.7.3-15968-x64/bin:/c/Program Files/dotnet:/c/Program Files/PhreePlot:/c/Program Files/CMake/bin:/c/3rdParty/Julia-1.6.2/bin:/c/Users/dlpar/AppData/Local/Microsoft/WindowsApps:/c/Users/dlpar/.dotnet/tools:/c/3rdParty/GnuWin32/bin:/c/Program Files/doxygen/bin:/usr/bin/vendor_perl:/usr/bin/core_perl
9f39bac simplified advection
38dbc89 Adding simplified example
84b688b Added Pressure, Saturation, and Temperature to BMI_GetValue
b9ef6b3 simplified writing YAML file, 

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,49 @@
 
 # /
 
-# /Doxygen/
-/Doxygen/html
+# Doxygen/
+Doxygen/html
 
-# /Tests/
-/Tests/Makefile.in
+# Tests/
+Tests/Makefile.in
 
-# /Tests/vs2012/
-/Tests/vs2012/FortranAdvect.u2d
-/Tests/vs2012/Tests.opensdf
-/Tests/vs2012/Tests.sdf
-/Tests/vs2012/Tests.v11.suo
-/Tests/vs2012/mpi
-/Tests/vs2012/mpi_debug
-/Tests/vs2012/openmp
-/Tests/vs2012/openmp_debug
-/Tests/vs2012/vc110.pdb
-/Tests/vs2012/x64
+# Tests/vs2012/
+Tests/vs2012/FortranAdvect.u2d
+Tests/vs2012/Tests.opensdf
+Tests/vs2012/Tests.sdf
+Tests/vs2012/Tests.v11.suo
+Tests/vs2012/mpi
+Tests/vs2012/mpi_debug
+Tests/vs2012/openmp
+Tests/vs2012/openmp_debug
+Tests/vs2012/vc110.pdb
+Tests/vs2012/x64
 
-# /src/IPhreeqcPhast/
-/_build*
+# backup files
+*~
+
+# autotools
+aclocal.m4
+configure
+Makefile.in
+autom4te.cache/
+config/
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
+
+
+# ignore directories beginning with '_'
+/_*/
+
+# dist files
+configure.ac.dist
+Makefile.am.dist
+doc/NOTICE.TXT.dist
+doc/README.TXT.dist
+src/PhreeqcRM.h.dist
+src/IPhreeqcPhast/IPhreeqc/IPhreeqc.h.dist
+src/IPhreeqcPhast/IPhreeqc/Version.h.dist
+CMakeLists.txt.dist
