--- a/.github/workflows/distro.yml
+++ b/.github/workflows/distro.yml
@@ -44,6 +44,9 @@ jobs:
     - name: doxygen
       run: sudo apt-get install doxygen && cd Doxygen && make
 
+    - name: install yaml-cpp
+      run: sudo apt-get install libyaml-cpp-dev
+
     - name: mkdir
       run: mkdir ${{github.workspace}}/_build
 
@@ -62,32 +65,115 @@ jobs:
         name: tarball
         path: ${{github.workspace}}/_build/*.tar.gz
 
-  cmake-ubuntu:
-    name: cmake ubuntu
-    needs: distcheck
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/download-artifact@v3
-        with:
-          name: tarball
-      
-      - name: printenv
-        run: printenv
-      
-      - name: dir
-        run: pwd && find .
+  autotools:
+    name: autotools
+    needs: [init, distcheck]
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-latest, ubuntu-latest]
 
-  cmake-windows:
-    name: cmake windows
-    needs: distcheck
-    runs-on: windows-latest
+    runs-on: ${{ matrix.os }}
+
+    env:
+      VER_STRING: ${{ needs.init.outputs.VER }}-${{ needs.init.outputs.REL }}
+
     steps:
-      - uses: actions/download-artifact@v3
-        with:
-          name: tarball
-      
-      - name: printenv
-        run: Get-ChildItem 'env:'
-      
-      - name: dir
-        run: Get-ChildItem
+
+    - uses: actions/download-artifact@v3
+      with:
+        name: tarball
+
+    - name: Install ninja yaml-cpp valgrind (Linux)
+      if: runner.os == 'Linux'
+      run: sudo apt-get install -y ninja-build valgrind libyaml-cpp-dev
+
+    - name: Install ninja yaml-cpp (macOS)
+      if: runner.os == 'macOS'
+      run: brew install ninja yaml-cpp
+
+    - name: Extract tarball
+      run: tar xvzf phreeqcrm-${{ env.VER_STRING }}.tar.gz
+
+    - name: mkdir build
+      run: mkdir ${{ github.workspace }}/build
+
+    - name: Configure with autotools
+      working-directory: ${{ github.workspace }}/build
+      run: ../phreeqcrm-${{ env.VER_STRING }}/configure
+
+    - name: Build with autotools
+      working-directory: ${{ github.workspace }}/build
+      run: make -j2
+
+    - name: Install with autotools
+      working-directory: ${{ github.workspace }}/build
+      run: sudo make install
+
+    - name: Cleanup
+      run: rm -rf *
+
+    - uses: actions/checkout@v3
+
+    - name: Test install
+      working-directory: ${{ github.workspace }}/Tests
+      run: |
+        echo 'objects = advection_bmi_cpp.o advection_c.o advection_cpp.o gas_c.o gas_cpp.o main.o SimpleAdvection.o species_c.o species_cpp.o WriteYAMLFile.o YAMLPhreeqcRM.o' > Makefile
+        echo 'test : $(objects)'                                  >> Makefile
+        echo '	$(CXX) -o test $(objects) -lphreeqcrm -lyaml-cpp' >> Makefile
+        env CC='gcc' CXX='g++ -std=gnu++11' make test
+
+  cmake:
+    name: cmake
+    needs: [init, distcheck]
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
+
+    runs-on: ${{ matrix.os }}
+
+    env:
+      VER_STRING: ${{ needs.init.outputs.VER }}-${{ needs.init.outputs.REL }}
+
+    steps:
+
+    - uses: actions/download-artifact@v3
+      with:
+        name: tarball
+
+    - name: Install ninja yaml-cpp valgrind (Linux)
+      if: runner.os == 'Linux'
+      run: sudo apt-get install -y ninja-build valgrind libyaml-cpp-dev
+
+    - name: Install ninja yaml-cpp (macOS)
+      if: runner.os == 'macOS'
+      run: brew install ninja yaml-cpp
+
+    - name: Install yaml-cpp (Windows)
+      if: runner.os == 'Windows'
+      run: vcpkg install yaml-cpp:x64-windows
+
+    - name: Set up Visual Studio shell (Windows)
+      if: runner.os == 'Windows'
+      uses: egor-tensin/vs-shell@v2
+      with:
+        arch: x64
+
+    - name: Extract tarball
+      run: tar xvzf phreeqcrm-${{ env.VER_STRING }}.tar.gz
+
+    - name: Configure with CMake (Not Windows)
+      if: runner.os != 'Windows'
+      run: cmake -B build -S phreeqcrm-${{ env.VER_STRING }} -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
+
+    - name: Configure with CMake (Windows)
+      if: runner.os == 'Windows'
+      run: cmake --toolchain ${{ env.VCPKG_INSTALLATION_ROOT }}/scripts/buildsystems/vcpkg.cmake -B build -S phreeqcrm-${{ env.VER_STRING }} -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
+
+    - name: Build with CMake
+      run: cmake --build ${{ github.workspace }}/build --config ${{ env.BUILD_TYPE }}
+
+    - name: Test with CMake
+      working-directory: ${{ github.workspace }}/build
+      run: ctest -C ${{ env.BUILD_TYPE }}
