--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -108,8 +108,10 @@ trigger-downstream:
   script:
     - echo triggering vs2di
     - curl -X POST -F token=${VS2DI_TRIGGER} -F ref=master https://code.chs.usgs.gov/api/v4/projects/${VS2DI_ID}/trigger/pipeline
+    - sleep 90
     - echo triggering vs2drt
     - curl -X POST -F token=${VS2DRT_TRIGGER} -F ref=master https://code.chs.usgs.gov/api/v4/projects/${VS2DRT_ID}/trigger/pipeline
+    - sleep 90
 
   ## Upstream Projects
   ## phreeqcrm https://code.chs.usgs.gov/coupled/phreeqcrm
