Squashed 'PhreeqcRM/' changes from 3b8e5d7e..434f589a
434f589a Merge commit 'aa2889232c63f83ae7932285a9f64fa33c575892'
aa288923 Squashed 'src/' changes from abf12f6d..1fdc3595
d55dc8e5 Merge pull request #144 from dlparkhurst/bmi-f90
bdb9a080 Fixed bugs in inverse
b21261c7 strcpy_safe and strcat_safe
92b4439e trying different header files
c2930786 added <cstring>
d6334c67 warnings, strcat, strcpy
0e6e6e93 cleaning up some of intel compiler warnings
8efde827 Merge pull request #143 from dlparkhurst/bmi-f90
5d0e0b0b Only root writes and reads yaml file
88a0f3bb Added master branch to build on setup-fortran
c2d04cf4 Merge pull request #142 from scharlton2/setup-fortran
668bafc9 Disabled mpi in setup-fortran
8fb65376 Reenabled mpi in setup-fortran
b0a5635d Merge remote-tracking branch 'upstream/master' into setup-fortran
87fe5029 Removed incompatible compiler combinations
11157429 Try using goto(s)
fc2dcb0c Try updated logical expression
5cfbba07 Re-added .github/workflows/ci.yml
f05ef57c Try debug builds
75672b52 Turn off optimizing on k_temp
ca2664e3 Test all intel compilers
4e5a25d0 Merge pull request #141 from dlparkhurst/bmi-f90
d2f985e3 Removed intel compiler
85dd076a Turn off fortran testing
bb199741 Updated show mpi compilers
6085daef Removed show extensions
6f05dbb5 Added show mpi compilers step
8f03c861 Override compilers on linux
a4da1b1b Fixed cmake build bug: That used mpi fortran compile options when compiling c/cxx code when MPI was enabled
418f5819 Disable with yaml-cpp
bc7ebc7d Merge branch 'bmi-f90' of github.com:dlparkhurst/phreeqcrm-bmi into bmi-f90
7a4b2a04 Added ninja and yaml-cpp install to mpi
3efd993a Added checkout
2118631c Added mpi
381559f6 Missed a loop
afd4983c Fixed Gas_c for loops when compiled with icc Added ctest
01a38b93 Added build steps
1500ce9e Added windows-2019
917b654e Changed macos-12 to gcc-10
abbbdd63 Updated gcc fortran versions
d7db03c6 Changed ninja install
f5db63cb Added CMake tests
d27ded03 Add windows os condition
290503

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,6 @@ swig/python/ex11-advect/ex11-advect.yaml
 swig/python/ex11-advect/ex11-advect.chem.txt
 swig/python/ex11-advect/ex11-advect.log.txt
 swig/python/ex11-advect/.ipynb_checkpoints/
+
+# default build directory when using vscode
+build/
