Squashed 'PhreeqcRM/' changes from d2ffa38a..f33ba114
f33ba114 Added workflow_dispatch

git-subtree-dir: PhreeqcRM
git-subtree-split: f33ba114e181924e0d346980ab577c1a215a7bb4

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ on:
       - 'CMakePresets.json'
       - 'build-all-presets.sh'
       - '.github/workflows/wheels.yml'
+  workflow_dispatch:
 
 env:
   NAME: PhreeqcRM
