Squashed 'PhreeqcRM/' changes from 3fd590dc..560eedec
560eedec Merge commit 'b4b3dceb88df8dd840c64782ba46f3bffd1197de'
b4b3dceb Squashed 'database/' changes from e0447f7a..9665bd4a
80c529fc Merge remote-tracking branch 'usgs-coupled/master'
489c4ced Merge pull request #147 from scharlton2/master-update-cmake
d34b6d07 Renamed phreeqcrm_devel to phreeqcrm_dev
788246c9 Merge branch 'usgs-coupled:master' into master-update-cmake
cf730504 Added swig/python/ex11-advect/environment.yml
8651221f Updated miniconda-jupyter-notebook-readme.md
e17a130b Merge pull request #146 from scharlton2/master-update-cmake
9dda75a8 Updated for ubuntu 22.04
2c123ecb Working on development
7b1ba5f9 Merge pull request #145 from scharlton2/master-update-cmake
197aa095 Updated for zlib and cmake version 3.26
b65f4a1b Added macos-13 to wheels.yml
8c6a42a1 Updated pyproject.toml version
6d06a823 Added python 3.12

git-subtree-dir: PhreeqcRM
git-subtree-split: 560eedeccfa41abff11f65a053271b9617077da2

--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -1,10 +1,11 @@
 name: setup-fortran
 
 on:
-  push:
-    branches:
-      - master
-      - setup-fortran
+  # push:
+  #   branches:
+  #     - master
+  #     - setup-fortran
+  workflow_dispatch:
 
 env:
   NAME: PhreeqcRM
