--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,8 +1,8 @@
-SET(PhreeqcRM_DOCS
-AbstractAWR.pdf
-NOTICE.TXT
-Phreeqc_2_1999_manual.pdf
-Phreeqc_3_2013_manual.pdf
-README.TXT
+set(PhreeqcRM_DOCS
+  AbstractAWR.pdf
+  NOTICE.TXT
+  Phreeqc_2_1999_manual.pdf
+  Phreeqc_3_2013_manual.pdf
+  README.TXT
 )
-install (FILES ${PhreeqcRM_DOCS} DESTINATION doc)
+install(FILES ${PhreeqcRM_DOCS} DESTINATION ${CMAKE_INSTALL_DOCDIR})
