Squashed 'PhreeqcRM/' changes from 560eedec..2f9eda1b
2f9eda1b Merge commit '501999e3ae72eee39ab9d0db86d1f434a2affe0a'
501999e3 Squashed 'src/' changes from 8989bd95..c2524e8d
c29cf555 Merge commit 'b63aa8e8ecbadd1920ae0b475788ec44c08d5f17'
b63aa8e8 Squashed 'database/' changes from 9665bd4a..976555e2
f59321ec Merge pull request #156 from usgs-coupled/155-deploy_pages-is-failing
14b0f7e2 Updated download-artifact version for deploy_pages Renamed cd to wheels
3631192b Merge pull request #154 from usgs-coupled/153-check-if-this-should-be-changed-setup-fortran
b8b7aaac Added the pipe symbol to the run option
6f7b5eee Changed Unset CC/CXX to use bash shell
0ae8218c Unset CC/CXX on Windows for cmake job
cf771a58 Unset CC/CXX on windows
9ba3c1a0 Use fortran-lang/setup-fortran
746454b8 Merge pull request #152 from usgs-coupled/150-nodejs-16-actions-are-deprecated
8fb424cd Changed artifact name see https://github.com/actions/upload-artifact?tab=readme-ov-file#breaking-changes
c098d5e0 Merge pull request #151 from usgs-coupled/148-wrong-license-in-pyprojecttoml
e8ffe34c actions/download-artifact@v3 - actions/download-artifact@v4
01f4f3f2 Merge pull request #149 from dlparkhurst/module
accf0880 Updated Node.js actions
4db06adb Updated license classifier, thanks to @pya
7233f0d8 Updated some documentation
55ae80cc Only deploy_pages on usgs-coupled/phreeqcrm
cde4bb4a extra qualifier removed
ec8cfb11 Moved BMI methods to RM_interface_C.cpp as RM_Bmi... Can construct old PhreeqcRM with RM_Create. Construct BMI with RM_BmiCreate.
dece854d Has RM_Create and RM_BmiCreate. Works on test cases on my computer
834a4fe0 Restored all jobs
1bb4e8be Use file to create micromamba env
221c2bb2 Changed run doxygen shell
c34d8cc0 Updated doxygen to 1.9.7
0e056c49 Fixes warnings in doxygen * Removes USE_YAML guard from YAML_interface.F90 * Updated param l for BMI_GetTimeUnits * Added missing param l for BMI_GetValueChar * Fixed typo BMI_GetVarItemSize -> BMI_GetVarItemsize * Added bmi:: to bmif_

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ src/IPhreeqcPhast/IPhreeqc/phreeqcpp/print.utf-8.cpp
 src/IPhreeqcPhast/IPhreeqc/phreeqcpp/print.windows-1252.cpp
 
 # Doxygen/make
+src/BMI_interface.F90.save
 src/RM_interface.F90.save
 src/YAML_interface.F90.save
 
