--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,8 @@ endif()
 option(PHREEQCRM_NO_UTF8_ENCODING "Build without utf-8 encoding" OFF)
 
 set(PhreeqcRM_SOURCES
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/BMI_interface_C.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/BMI_interface_C.h
   ${CMAKE_CURRENT_SOURCE_DIR}/src/BMI_interface_F.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/BMI_interface_F.h
   ${CMAKE_CURRENT_SOURCE_DIR}/src/bmi.hxx
@@ -239,6 +241,8 @@ set(PhreeqcRM_SOURCES
   ${CMAKE_CURRENT_SOURCE_DIR}/src/RMVARS.h
   ${CMAKE_CURRENT_SOURCE_DIR}/src/VarManager.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/VarManager.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/YAML_interface_C.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/YAML_interface_C.h
   ${CMAKE_CURRENT_SOURCE_DIR}/src/YAML_interface_F.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/YAML_interface_F.h
   ${CMAKE_CURRENT_SOURCE_DIR}/src/YAMLPhreeqcRM.cpp
@@ -345,6 +349,7 @@ endif()
 
 set(PhreeqcRM_Headers
   ${PhreeqcRM_BINARY_DIR}/irm_dll_export.h
+  ${PROJECT_SOURCE_DIR}/src/BMI_interface_C.h
   ${PROJECT_SOURCE_DIR}/src/BMI_interface_F.h
   ${PROJECT_SOURCE_DIR}/src/BMIVariant.h
   ${PROJECT_SOURCE_DIR}/src/bmi.hxx
@@ -368,6 +373,7 @@ set(PhreeqcRM_Headers
   ${PROJECT_SOURCE_DIR}/src/RM_interface_C.h
   ${PROJECT_SOURCE_DIR}/src/RMVARS.h
   ${PROJECT_SOURCE_DIR}/src/VarManager.h
+  ${PROJECT_SOURCE_DIR}/src/YAML_interface_C.h
   ${PROJECT_SOURCE_DIR}/src/YAML_interface_F.h
   ${PROJECT_SOURCE_DIR}/src/YAMLPhreeqcRM.h
 )
