--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,16 +4,18 @@ on:
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
     paths-ignore:
-      - 'CMakePresets.json'
-      - 'build-all-presets.sh'
       - '.github/workflows/wheels.yml'
+      - '.gitignore'
+      - 'build-all-presets.sh'
+      - 'CMakePresets.json'
   push:
     # branches:
     #   - master
     paths-ignore:
-      - 'CMakePresets.json'
-      - 'build-all-presets.sh'
       - '.github/workflows/wheels.yml'
+      - '.gitignore'
+      - 'build-all-presets.sh'
+      - 'CMakePresets.json'
   workflow_dispatch:
 
 env:
@@ -44,7 +46,7 @@ jobs:
     name: valgrind
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: update apt-get
       run: sudo apt-get -y update
@@ -69,7 +71,7 @@ jobs:
     needs: init
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: autoreconf
       run: autoreconf -fvi
@@ -77,8 +79,17 @@ jobs:
     - name: versioning
       run: ./jenkins-dist.sh -v ${{ needs.init.outputs.VER }} -r ${{ needs.init.outputs.REL }} -d ${{ needs.init.outputs.DATE }}
 
-    - name: doxygen
-      run: sudo apt-get -y install doxygen graphviz && cd Doxygen && make
+    - name: prepare doxygen
+      run: sudo apt-get -y install doxygen graphviz
+
+    - name: update doxygen using micromamba env
+      uses: mamba-org/setup-micromamba@v1
+      with:
+        environment-file: Doxygen/doxygen.environment.yml
+
+    - name: run doxygen
+      shell: micromamba-shell {0}
+      run: cd Doxygen && make
 
     - name: install yaml-cpp
       run: sudo apt-get -y install libyaml-cpp-dev
@@ -96,7 +107,7 @@ jobs:
       working-directory: ${{github.workspace}}/_build
       run: DISTCHECK_CONFIGURE_FLAGS="--enable-fortran-test --with-yaml-cpp" make -j2 distcheck
 
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       with:
         name: tarball
         path: ${{github.workspace}}/_build/*.tar.gz
@@ -116,7 +127,7 @@ jobs:
 
     steps:
 
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       with:
         name: tarball
 
@@ -185,7 +196,7 @@ jobs:
     - name: Cleanup
       run: rm -rf *
 
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Test autotools install
       working-directory: ${{ github.workspace }}/Tests
@@ -200,8 +211,7 @@ jobs:
       run: env CC='cc' CXX='c++ -std=c++11' make -f pkgconfig.mk pkgconfig_test && ./pkgconfig_test
 
   cmake:
-    if: ${{ false }}
-    name: ${{ matrix.os }} shared=${{ matrix.build_shared_libs }} yaml=${{ matrix.phreeqcrm_with_yaml_cpp }}
+    name: ${{ matrix.os }} shared=${{ matrix.build_shared_libs }} yaml=${{ matrix.phreeqcrm_with_yaml_cpp }} type=${{ matrix.BUILD_TYPE }}
     needs: [init, distcheck]
     strategy:
       fail-fast: false
@@ -209,7 +219,7 @@ jobs:
         os: [macos-11, macos-12, ubuntu-20.04, ubuntu-22.04, windows-2019, windows-2022]
         build_shared_libs: [OFF, ON]
         phreeqcrm_with_yaml_cpp: [OFF, ON]
-        # BUILD_TYPE: [Debug, Release]
+        BUILD_TYPE: [Debug, Release]
 
     runs-on: ${{ matrix.os }}
 
@@ -225,22 +235,30 @@ jobs:
       shell: bash
       run: echo "VCPKG_INSTALLATION_ROOT=$VCPKG_INSTALLATION_ROOT" >> $GITHUB_ENV
 
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       with:
         name: tarball
 
     - name: Install GNU Fortran (macOS)
       if: ${{ runner.os == 'macOS' }}
-      uses: awvwgk/setup-fortran@main
+      uses: fortran-lang/setup-fortran@v1
       with:
         compiler: gcc
         version: 12
-
+  
     - name: Install oneAPI Fortran (Windows)
       if: ${{ runner.os == 'Windows' }}
-      uses: i-RIC/install-intelfortran-action@v1
+      uses: fortran-lang/setup-fortran@v1
       with:
-        cache: true
+        compiler: intel-classic
+        version: '2021.10'
+
+    - name: Unset CC/CXX (Windows)
+      if: runner.os == 'Windows'
+      shell: bash
+      run: |
+        echo "CC=" >> $GITHUB_ENV
+        echo "CXX=" >> $GITHUB_ENV   
 
     - name: Install ninja valgrind (Linux)
       if: ${{ runner.os == 'Linux' }}
@@ -269,7 +287,7 @@ jobs:
 
     # - name: Set up Python ${{ matrix.python-version }}
     - name: Set up Python 3.8
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         # python-version: ${{ matrix.python-version }}
         python-version: 3.8
@@ -330,7 +348,7 @@ jobs:
       if: runner.os == 'Windows'
       run: Remove-Item -Recurse -Force *
 
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Test install (configure) (Non-Windows)
       if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' }}
@@ -384,11 +402,11 @@ jobs:
           - os: ubuntu-22.04
             mpi: 'msmpi'
           - os: windows-2019
-            mpi: 'mpich'            
+            mpi: 'mpich'
           - os: windows-2019
             mpi: 'ompi'
           - os: windows-2022
-            mpi: 'mpich'            
+            mpi: 'mpich'
           - os: windows-2022
             mpi: 'ompi'
     timeout-minutes: 20
@@ -407,7 +425,7 @@ jobs:
       shell: bash
       run: echo "VCPKG_INSTALLATION_ROOT=$VCPKG_INSTALLATION_ROOT" >> $GITHUB_ENV
 
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       with:
         name: tarball
 
@@ -451,7 +469,7 @@ jobs:
 
     # # - name: Set up Python ${{ matrix.python-version }}
     # - name: Set up Python 3.8
-    #   uses: actions/setup-python@v4
+    #   uses: actions/setup-python@v5
     #   with:
     #     # python-version: ${{ matrix.python-version }}
     #     python-version: 3.8
@@ -528,7 +546,7 @@ jobs:
     #   if: runner.os == 'Windows'
     #   run: Remove-Item -Recurse -Force *
 
-    # - uses: actions/checkout@v3
+    # - uses: actions/checkout@v4
 
     # - name: Test install (configure) (Non-Windows)
     #   if: runner.os != 'Windows'
@@ -555,3 +573,47 @@ jobs:
     #   run: |
     #     $env:PATH="${{ env.VCPKG_INSTALLATION_ROOT }}\packages\yaml-cpp_x64-windows\bin;C:\Program Files (x86)\PhreeqcRM\bin;$env:PATH"
     #     ctest -C ${{ env.BUILD_TYPE }} --output-on-failure
+
+  deploy_pages:
+    # todo update github.ref below
+    if: github.repository == 'usgs-coupled/phreeqcrm' && github.ref == 'refs/heads/master' && github.event_name == 'push'
+
+    needs: [init, distcheck]
+
+    runs-on: ubuntu-latest
+
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      actions: read     # req'd by actions/deploy-pages@v4
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    env:
+      VER_STRING: ${{ needs.init.outputs.VER }}-${{ needs.init.outputs.REL }}
+
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: tarball
+
+      - run: tar xvzf phreeqcrm-${{ env.VER_STRING }}.tar.gz
+
+      - name: Fix permissions
+        run: |
+          chmod -c -R +rX "phreeqcrm-${{ env.VER_STRING }}/Doxygen/html" | while read line; do
+            echo "::warning title=Invalid file permissions automatically fixed::$line"
+          done
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: phreeqcrm-${{ env.VER_STRING }}/Doxygen/html
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
