Squashed 'PhreeqcRM/' changes from 9cfb5762..80bba0b6
80bba0b6 Merge commit '1f1a092d49ddb56473a97023abc859d751612583'
1f1a092d Squashed 'src/' changes from 2c5fcbaa..8fb64150
6f4503cf Enabled more jobs for testing
6a92a860 Merge pull request #162 from dlparkhurst/module
1a57b074 Merge branch 'master' into module
3c7ffa13 Merge branch 'master' into module
d5d7d751 Issue 160 in phreeqc. llnl minimum temperature problem. There are several places where a SOLUTION is constructed to get lists or test the database. By default the SOLUTION is 25C, so if llnl has a minimum temperature greater (or maximum temperature less) than 25, an error is encountered. The fix is to change the temperature of the SOLUTIONs to the minimum temperature of the llnl grid if llnl is being used.

git-subtree-dir: PhreeqcRM
git-subtree-split: 80bba0b69e8053addb8c97ca8139730a2e61db64

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,7 +126,7 @@ jobs:
           echo TARBALL="phreeqcrm-${{ needs.init.outputs.VER }}-${{ needs.init.outputs.REL }}.tar.gz"
 
   valgrind:
-    if: ${{ false }}
+    # if: ${{ false }}
     name: valgrind
     runs-on: ubuntu-latest
     steps:
@@ -225,7 +225,7 @@ jobs:
         path: ${{github.workspace}}/_build/*.zip
 
   autotools:
-    if: ${{ false }}
+    # if: ${{ false }}
     name: autotools
     needs: [init, distcheck]
     strategy:
@@ -324,7 +324,7 @@ jobs:
       run: env CC='cc' CXX='c++ -std=c++11' make -f pkgconfig.mk pkgconfig_test && ./pkgconfig_test
 
   cmake:
-    if: ${{ false }}
+    # if: ${{ false }}
     name: ${{ matrix.os }} shared=${{ matrix.build_shared_libs }} yaml=${{ matrix.phreeqcrm_with_yaml_cpp }} type=${{ matrix.BUILD_TYPE }}
     needs: [init, distcheck]
     strategy:
