Squashed 'PhreeqcRM/' changes from 5c48c869..769e1a6e
769e1a6e Removed extra on:
de78215a Added dist.yml

git-subtree-dir: PhreeqcRM
git-subtree-split: 769e1a6e5e9d04d371a71a622dca784052bddaba

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
     paths-ignore:
+      - '.github/workflows/dist.yml'
       - '.github/workflows/wheels.yml'
       - '.gitignore'
       - 'build-all-presets.sh'
@@ -12,6 +13,7 @@ on:
     # branches:
     #   - master
     paths-ignore:
+      - '.github/workflows/dist.yml'
       - '.github/workflows/wheels.yml'
       - '.gitignore'
       - 'build-all-presets.sh'
