Squashed 'PhreeqcRM/' changes from b24b855c..dc6c23c4
dc6c23c4 Merge commit 'a64e10cb1caa6572fc504368e199c887727fefc1'
a64e10cb Squashed 'src/' changes from dc753eb6..1a20b699
c961e309 Merge pull request #163 from dlparkhurst/module
d11f4bce Added Print phreeqcrm.pc to autotools job
2613c85b Removed ls from 'Install gcc(gfortran) ninja yaml-cpp (macOS)' step
c695e939 renamed to RM_BmiGetGridNodeCount and BMI_GetGridNodeCount and others.

git-subtree-dir: PhreeqcRM
git-subtree-split: dc6c23c41813565ecd93899c750f83c589cd5df2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -269,7 +269,7 @@ jobs:
       run: |
         brew reinstall gcc
         brew install ninja yaml-cpp
-        ls -alR /usr/local/Cellar/
+        # ls -alR /usr/local/Cellar/
 
     - name: Verify gfortran
       run: |
@@ -285,6 +285,10 @@ jobs:
     - name: Configure with autotools
       working-directory: ${{ github.workspace }}/build
       run: ../phreeqcrm-${{ env.VER_STRING }}/configure --enable-fortran-test --with-yaml-cpp
+
+    - name: Print phreeqcrm.pc
+      working-directory: ${{ github.workspace }}/build
+      run:  cat phreeqcrm.pc
 
     - name: Build with autotools
       working-directory: ${{ github.workspace }}/build
